💎 add openDevTools, clearCache and simulateOutage settings for Electron

--- a/template/settings/settings.default.json
+++ b/template/settings/settings.default.json
@@ -20,6 +20,9 @@
       "showBareErrors": false
     }
   },
+  "openDevTools": true,
+  "simulateOutage": false,
+  "clearCache": false,
   "appendSwitch": {
     "--disable-pinch": "",
     "--disable-touch-adjustment": "",
