⚙️ set openDevTools to false

--- a/template/settings/settings.default.json
+++ b/template/settings/settings.default.json
@@ -20,7 +20,7 @@
       "showBareErrors": false
     }
   },
-  "openDevTools": true,
+  "openDevTools": false,
   "simulateOutage": false,
   "clearCache": false,
   "appendSwitch": {
