--- a/template/package.json
+++ b/template/package.json
@@ -6,7 +6,7 @@
   "version": "{{ appver }}",
   "author": "{{ author }}",
   "description": "{{ description }}",
-  "license": null,
+  "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     {{#if_eq builder 'packager'}}
@@ -77,58 +77,75 @@
   },
 {{/if_eq}}
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.4.4",
     {{#isEnabled plugins 'standard-settings'}}
     "assignment": "^2.2.1",
     {{/isEnabled}}
     "vue": "^2.5.16"{{deps plugins}}
   },
   "devDependencies": {
-    "ajv": "^6.5.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "ajv": "^6.10.0",
+    "babel-loader": "^8.0.6",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.1.2",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "4.6.0",
-    "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
-    "del": "^3.0.0",
+    "cfonts": "^2.4.3",
+    "chalk": "^2.4.2",
+    "copy-webpack-plugin": "5.0.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "del": "^4.1.1",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
-    "electron-debug": "^1.5.0",
+    "electron": "^5.0.1",
+    "electron-debug": "^3.0.0",
     "electron-devtools-installer": "^2.2.4",
     {{#if_eq builder 'packager'}}
-    "electron-packager": "^12.1.0",
-    "electron-rebuild": "^1.8.1",
+    "electron-packager": "^13.1.1",
+    "electron-rebuild": "^1.8.4",
     {{else}}
     "electron-builder": "^20.19.2",
     {{/if_eq}}
     {{#eslint}}
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-vue": "^5.2.2",
     {{#if_eq eslintConfig 'standard'}}
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     {{/if_eq}}
     {{#if_eq eslintConfig 'airbnb'}}
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.10.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.17.2",
     {{/if_eq}}
     {{/eslint}}
-    "mini-css-extract-plugin": "0.4.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "0.6.0",
     {{#if unit}}
     "inject-loader": "^4.0.1",
     "karma": "^2.0.2",
@@ -152,19 +169,19 @@
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     {{#if usesass}}
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     {{/if}}
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack-cli": "^3.0.8",
-    "webpack": "^4.15.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.1"
   }
 }
