--- a/template/package.json
+++ b/template/package.json
@@ -106,7 +106,7 @@
     "@babel/register": "^7.4.4",
     "ajv": "^6.10.0",
     "babel-loader": "^8.0.6",
-    "babili-webpack-plugin": "^0.1.2",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "cfonts": "^2.4.3",
     "chalk": "^2.4.2",
     "copy-webpack-plugin": "5.0.3",
@@ -148,23 +148,23 @@
     "mini-css-extract-plugin": "0.6.0",
     {{#if unit}}
     "inject-loader": "^4.0.1",
-    "karma": "^2.0.2",
+    "karma": "^4.1.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.2",
     "karma-electron": "^6.0.0",
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^4.0.0-rc.6",
     {{/if}}
     {{#if e2e}}
-    "require-dir": "^1.0.0",
-    "spectron": "^3.8.0",
+    "require-dir": "^1.2.0",
+    "spectron": "^5.0.0",
     {{/if}}
     {{#testing unit e2e}}
-    "babel-plugin-istanbul": "^4.1.6",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
+    "babel-plugin-istanbul": "^5.1.4",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     {{/testing}}
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
